--- a/Simple-tousbih/main.css
+++ b/Simple-tousbih/main.css
@@ -8,6 +8,25 @@ body {
     margin: 200px;
     background-color: var(--secondary-color);
 }
+
+header {
+    position: relative;
+    color: #fff;
+    padding: 1rem;
+    text-align: center;
+}
+a {
+    text-decoration: none;
+    color: var(--tertiary-color);
+    border: #582900 solid 1px;
+    border-radius: 13px;
+    padding: 13px;
+    background-color: black;
+}
+a:hover {
+    color: white;
+}
+
 h1 {
     margin-bottom: 30px;
     text-decoration: underline;
